--- a/Dockerfile.gbm
+++ b/Dockerfile.gbm
@@ -14,7 +14,7 @@ RUN apt-get update                                                              
 RUN git clone -b master https://github.com/xbmc/xbmc /usr/src/kodi                                              && \
     mkdir /usr/src/kodi-build                                                                                   && \
     cd /usr/src/kodi-build                                                                                      && \
-    cmake /usr/src/kodi -DCMAKE_INSTALL_PREFIX=/usr/local -DX11_RENDER_SYSTEM=gl                                && \
+    cmake /usr/src/kodi -DCMAKE_INSTALL_PREFIX=/usr/local -DCORE_PLATFORM_NAME=gbm -DX11_RENDER_SYSTEM=gl       && \
     cmake --build . -- VERBOSE=1 -j$(getconf _NPROCESSORS_ONLN)                                                 && \
     make install                                                                                                && \
     cd /usr/src/kodi                                                                                            && \
