--- a/Dockerfile.gbm
+++ b/Dockerfile.gbm
@@ -4,6 +4,7 @@ FROM ubuntu:latest
 RUN apt-get update                                                                                                                        && \
     apt-get install -y --no-install-recommends software-properties-common                                                                 && \
     add-apt-repository -s ppa:team-xbmc/xbmc-nightly                                                                                      && \
+    echo -e "\ndeb http://security.ubuntu.com/ubuntu bionic-security main universe multiverserestricted\n" >> /etc/apt/sources.list       && \
     apt-get update                                                                                                                        && \
     apt-get install -y --no-install-recommends git linux-headers-$(uname -r) retroarch libretro-* default-jdk tzdata ca-certificates      && \
     apt-get build-dep -y kodi                                                                                                             && \
