--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,3 +27,17 @@ jobs:
         cache: true
         dockerfile: Dockerfile.gbm
         tags: gbm
+
+  build_gbm_gles:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@master
+    - name: Publish Kodi to Registry
+      uses: elgohr/Publish-Docker-Github-Action@master
+      with:
+        name: xayon/docker-kodi-beta
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        cache: true
+        dockerfile: Dockerfile.gbm_gles
+        tags: gbmgles
