--- a/Dockerfile.gbm_gles
+++ b/Dockerfile.gbm_gles
@@ -18,7 +18,7 @@ RUN uname -a
 RUN git clone -b master https://github.com/xbmc/xbmc /usr/src/kodi                                              && \
     mkdir /usr/src/kodi-build                                                                                   && \
     cd /usr/src/kodi-build                                                                                      && \
-    cmake /usr/src/kodi -DCMAKE_INSTALL_PREFIX=/usr/local  -DCORE_PLATFORM_NAME=gbm -DGBM_RENDER_SYSTEM=gl      && \
+    cmake /usr/src/kodi -DCMAKE_INSTALL_PREFIX=/usr/local  -DCORE_PLATFORM_NAME=gbm -DGBM_RENDER_SYSTEM=gles    && \
     cmake --build . -- VERBOSE=1 -j$(getconf _NPROCESSORS_ONLN)                                                 && \
     make install                                                                                                && \
     cd /usr/src/kodi                                                                                            && \
